clean up and properly link external references

--- a/packages/shared_components/src/shared-button/BUILD.bazel
+++ b/packages/shared_components/src/shared-button/BUILD.bazel
@@ -10,6 +10,6 @@ ng_ts_project(
     ],
     deps = [
         "@npm_shared_components//@angular/core",
-        "@npm_shared_components//@angular/material"
+        "@npm_shared_components//@angular/material",
     ],
 )
