--- a/projects/project_one/src/app/dashboard/BUILD.bazel
+++ b/projects/project_one/src/app/dashboard/BUILD.bazel
@@ -5,9 +5,8 @@ package(default_visibility = ["//:__subpackages__"])
 ng_ts_project(
     name = "dashboard",
     srcs = glob(["*.ts"]),
-    # angular_assets = ["app.component.html"],
     deps = [
         "@npm_project_one//@angular/core",
-        "@npm_project_one//@angular/material",
+        "@npm_project_one//@packages/shared-components",
     ],
 )
