--- a/projects/project_one/src/app/dashboard/BUILD.bazel
+++ b/projects/project_one/src/app/dashboard/BUILD.bazel
@@ -7,6 +7,7 @@ ng_ts_project(
     srcs = glob(["*.ts"]),
     deps = [
         "@npm_project_one//@angular/core",
+        "@npm_project_one//@angular/material",
         "@npm_project_one//@packages/shared-components",
     ],
 )
