--- a/packages/lib_ts/BUILD.bazel
+++ b/packages/lib_ts/BUILD.bazel
@@ -1,6 +1,5 @@
 load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
-load("@npm//@bazel/typescript:index.bzl", "ts_config")
-load("//tools/libOne:angular_ts_library.bzl", "ng_ts_project")
+load("@npm//@bazel/typescript:index.bzl", "ts_project", "ts_config")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -12,18 +11,21 @@ ts_config(
     ],
 )
 
-ng_ts_project(
+ts_project(
     name = "ts",
     srcs = ["index.ts"],
+    tsconfig = ":tsconfig",
+    declaration = True,
+    declaration_map = True,
     deps = [
         "@npm//@types/node",
-        "//packages/libOne/src",
+        "//packages/lib_ts/src",
     ],
 )
 
 js_library(
-    name = "libOne",
-    package_name = "@packages/libOne",
+    name = "lib_ts",
+    package_name = "@packages/lib-ts",
     deps = [
         ":ts",
     ],
