--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "@bazel/bazelisk": "^1.7.5",
     "@bazel/buildifier": "^4.0.1",
     "@bazel/esbuild": "4.6.2",
@@ -33,6 +36,7 @@
     "rxjs": "^6.5.3",
     "typescript": "3.9.2",
     "systemjs": "6.1.2",
+    "terser": "4.3.1",
     "tslib": "^2.0.0"
   },
   "bugs": {
