--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "declaration": true,
     "declarationMap": true,
 
+    // For AngularJS Support
+    "allowSyntheticDefaultImports": true,
+
     // Custom Library Paths
     "baseUrl": ".",
     "paths": {
